fixed card spacing mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -269,6 +269,10 @@ main {
     .cards {
         overflow: hidden;
         padding-inline: var(--spacing-large);
+
+        @media (width < 500px) {
+            padding-inline: var(--spacing-medium);
+        }
     }
 }
 
